changed nodejs to node

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "scrypto-nodejs",
+  "name": "scrypto-node",
   "version": "1.2.0",
   "main": "index.js",
   "author": "undefined7887",
